# citation-checker

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  run-pipeline.yml
api/: check.py
input/: references.txt  test_sample.bib
outputs/: report.md  report_51-83.md  report_full.md
public/: app.js  index.html  style.css
scripts/: local_server.py  local_web.py
src/refaudit/: __init__.py  __main__.py  arxiv.py  bibtex_parser.py  budget.py  crossref.py  doi_resolver.py  etiquette.py  jalc.py  main.py  nlm.py  parser.py  pubmed.py  report.py  scoring.py  web.py
tests/: conftest.py  sample.md  sample2.md  test_arxiv.py  test_bibtex.py  test_miscitation_detection.py  test_smoke.py
