[project]
name = "citeguard"
dynamic = ["version"]
description = "Audit academic references against Crossref, PubMed, and arXiv — detect missing or retracted citations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "SRWS-PSG contributors"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
keywords = ["citation", "reference", "crossref", "retraction", "audit", "pubmed", "arxiv"]
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/SRWS-PSG/citation-checker"
Repository = "https://github.com/SRWS-PSG/citation-checker"
Issues = "https://github.com/SRWS-PSG/citation-checker/issues"

[project.scripts]
citeguard = "refaudit.main:main"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "refaudit.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"api/check.py" = ["E402"]
"scripts/local_web.py" = ["E402"]
